# norma

./: .gitignore  README.md  docker-compose.yml
apps/db/: postgres-statefulset.yaml
apps/infra/: netpol.yaml  secret-store.yaml
apps/kubernetes/: namespace.yaml  secret.yaml
apps/kubernetes/pg/: pvc.yaml  (+2 more)
apps/parser/: .dockerignore  .env.example  AGENTS.md  DATABASE_SCHEMA.md  Dockerfile  README.md  __init__.py  main.py  pyproject.toml
apps/parser/api/: routes.py
apps/parser/db/: __init__.py  connection.py  db.py  peraturan.py
apps/parser/k8s/: .gitignore  README.md
apps/parser/kubernetes/: Makefile  README.md  configmap.yaml  hpa.yaml  ingress.yaml  init-db.sh  kustomization.yaml  namespace.yaml  parser-deployment.yaml  parser-service.yaml  postgres-statefulset.yaml  values.yaml
apps/parser/migrations/: 002_create_indexes.sql
apps/parser/models/: __init__.py  ai_parse.py  ayat.py  bab.py  pasal.py  peraturan.py
apps/parser/parser/: __init__.py  ai_agent.py  pdf_parser.py  scraper.py  status.py
apps/parser/repositories/: __init__.py  ayat.py  bab.py  pasal.py  peraturan.py
apps/restapi/: .env.example  Dockerfile  README.md  go.mod  go.sum
apps/web/: Dockerfile  README.md  package.json
docker/postgres/: init.sql
infra/: infisical-secret.yaml  secret-store.yaml  secret.yaml
infra/db/: cfmap.yaml  externalsecret.yaml  pvc.yaml  service.yaml  statefulset.yaml
infra/parser/: secrets.yaml  service.yaml
infra/web/: ingress.yaml  service.yaml
migrations/: 004_create_views.sql  005_sample_data.sql  006_add_bab_peraturan_to_ayats.sql
(+46 files in other folders)
